# rt-voice-spark-experiments

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.beads/: issues.jsonl
docs/: ENVIRONMENT.md  RESEARCH-REPORT.md
docs/sessions/: 2026-01-13.md  2026-01-14.md
src/: __init__.py  main.py  run_ssl.py
src/llm/: __init__.py  llama_llm.py
src/stt/: whisper_stt.py
src/tts/: piper_tts.py
src/ui/: __init__.py  app.py
